# ai-assisterad-behandling-av-forskningsartiklar-general-v1

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Frågeställningar.xlsx  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: implement-next-milestone.prompt.md
docs/: implementation-roadmap.md
docs/architecture/: alternativ-plan-v1.md
docs/decisions/: 0001-clean-general-repo.md  0002-core-record-contract.md  0003-cost-and-token-usage-contract.md  0004-record-vs-answers-separation.md
docs/operations/: local-dev.md
docs/reviews/: Claude-Review--2026-06-05-0734--m0-skeleton-vs-plan.md  Claude-Review--2026-06-11-1411--repo-status-m2-readiness.md  Claude-Review--2026-06-11-1422--design-consistency-and-contracts.md  Codex-Review--2026-06-11-1355--current-status-before-next-slice.md  README.md
docs/workflows/: review-process.md
scripts/: check.ps1
src/article_analysis_general/: __init__.py  cli.py
src/article_analysis_general/cost/: __init__.py  usage.py
src/article_analysis_general/enrich/: __init__.py  crossref.py  openalex.py  unpaywall.py
src/article_analysis_general/ingest/: __init__.py  discovery.py
src/article_analysis_general/llm/: __init__.py
src/article_analysis_general/output/: inventory.py  matrix.py
src/article_analysis_general/parse/: __init__.py  fallback.py  grobid_client.py  local.py  ocr.py  record.py
tests/: test_cli.py  test_cost_usage.py  test_discovery.py  test_inventory.py  test_parse_local.py  test_parse_record.py  test_query_sql.py  test_questions_schema.py  test_record_models.py  test_run.py
(+10 files in other folders)
